test/e2e/features/rate_limit/local/testdata/extensionref-rl.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: route-rl-policy
  namespace: kgateway-base
spec:
  rateLimit:
    local:
      tokenBucket:
        maxTokens: 1
        tokensPerFill: 1
        fillInterval: 30s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc-route
  namespace: kgateway-base
spec:
  parentRefs:
    - name: gateway
      namespace: kgateway-base
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
      matches:
      - path:
          type: PathPrefix
          value: /path1
    - backendRefs:
        - name: backend
          port: 80
      matches:
      - path:
          type: PathPrefix
          value: /path2
      filters:
          - type: ExtensionRef
            extensionRef:
              group: gateway.kgateway.dev
              kind: TrafficPolicy
              name: route-rl-policy
