test/e2e/features/rate_limit/local/testdata/route-local-rate-limit-descriptors.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: route-rl-descriptors-policy
  namespace: kgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: svc-route
  rateLimit:
    local:
      tokenBucket:
        maxTokens: 100
        tokensPerFill: 100
        fillInterval: 300s
      descriptors:
      - entries:
        - type: Header
          header: x-user-id
        tokenBucket:
          maxTokens: 1
          tokensPerFill: 1
          fillInterval: 300s
      alwaysConsumeDefaultTokenBucket: false
      maxDynamicDescriptors: 10
