test/e2e/features/rate_limit/local/testdata/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-svc
  namespace: kgateway-base
  labels:
    app: simple-svc
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 3000
  selector:
    app: backend-0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-0
  namespace: kgateway-base
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-0
      version: v1
  template:
    metadata:
      labels:
        app: backend-0
        version: v1
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          name: backend-0
          ports:
            - containerPort: 3000
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: simple-svc
